Spacing fix

--- a/css/hong-kong-responsive.css
+++ b/css/hong-kong-responsive.css
@@ -96,3 +96,9 @@
 .reset-padding-top {
     padding-top: 0;
 }
+.reset-padding-left {
+    padding-left: 0;
+}
+.reset-padding-right {
+    padding-right: 0;
+}
